@@ -1,3 +1,5 @@
+2002-04-20  Martin Willers <willers@xm-arts.de>
+	- also displaying name of current tea when finished
 
 2002-04-20  Martin Willers <willers@xm-arts.de>
 	- now displaying name of current tea in tooltip
